# lczero-onnx

./: README.md  pyproject.toml  pytest.ini
.github/workflows/: default-workflow.yml
scripts/: build-lc0-python-bindings.sh  build-wheel.sh  setup.sh  test.sh
src/lczero/onnx/tests/: test_basic.py
